# scikit_build_issue

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  setup.cfg  setup.py
src/pkg/: __init__.py  module.cpp  some_funcs.py
